--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -19,6 +19,7 @@
 @import "./aside";
 @import "./tooltip";
 @import "./footer";
+@import "./post-copyright";
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
