修复底部左右页显示符号问题

--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -5,8 +5,8 @@
   <% if (page.total > 1){ %>
     <nav id="page-nav">
       <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
+        prev_text: '« Prev',
+        next_text: 'Next »'
       }) %>
     </nav>
   <% } %>
@@ -30,14 +30,4 @@
   <% if (page.posts.length){ %>
     </div></section>
   <% } %>
-
-    <% if (page.total > 1){ %>
-    <nav id="page-nav">
-      <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
-      }) %>
-    </nav>
-  <% } %>
-
 <% } %>
