修复 webpack 打包过程中，-webkit-box-orient: vertical; 丢失问题。

--- a/source-src/css/core/_mixin.scss
+++ b/source-src/css/core/_mixin.scss
@@ -87,7 +87,9 @@
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: $lines;
+/*! autoprefixer: off */
     -webkit-box-orient: vertical;
+/* autoprefixer: on */
 }
 
 // word-break
