--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -41,7 +41,9 @@
 			text-overflow: ellipsis;
 			display: -webkit-box;
 			-webkit-line-clamp: 2;
+/*! autoprefixer: off */
 			-webkit-box-orient: vertical;
+/* autoprefixer: on */
 		}
 		.header-menu{
 			font-weight: 300;
