--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
     		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
     	</div>
       	<div class="footer-right">
-      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/bujige/hexo-theme-yulia" target="_blank">Yilia</a> by WorkingBoys
+      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/bujige/hexo-theme-yulia" target="_blank">Yulia</a> by WorkingBoy
       	</div>
     </div>
   </div>
