--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.dcf9a1.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.face26.css">
