--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,12 +1,36 @@
+
+<% if (theme.busuanzi_count.site_uv) { %>
+  <script src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<% } %>
+
 <footer id="footer">
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
     		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
     	</div>
-      	<div class="footer-right">
-      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/bujige/hexo-theme-yulia" target="_blank">Yulia</a> by WorkingBoy
-      	</div>
+    	<div class="footer-right">
+    		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/bujige/hexo-theme-yulia" target="_blank">Yulia</a> by WorkingBoy
+    	</div>
+      <div class="footer-center">
+        <% if (theme.busuanzi_count.site_uv) { %>
+          <span class="busuanzi-count">
+            <%= theme.busuanzi_count.site_uv_header %>
+            <span class="busuanzi-value" id="busuanzi_value_site_uv"></span>
+            <%= theme.busuanzi_count.site_uv_footer %>
+          </span>
+        <% } %>
+        <% if (theme.busuanzi_count.site_uv && theme.busuanzi_count.site_pv) { %>
+          <span class="busuanzi-count-divider" >|</span>
+        <% } %>
+        <% if (theme.busuanzi_count.site_pv) { %>
+          <span class="busuanzi-count">
+            <%= theme.busuanzi_count.site_pv_header %>
+            <span class="busuanzi-value" id="busuanzi_value_site_pv"></span>
+            <%= theme.busuanzi_count.site_pv_footer %>
+          </span>
+        <% } %>
+      </div>
     </div>
   </div>
 </footer>
