更改左侧导航栏样式。

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -21,7 +21,7 @@
           </span>
         <% } %>
         <% if (theme.busuanzi_count.site_uv && theme.busuanzi_count.site_pv) { %>
-          <span class="busuanzi-count-divider" >|</span>
+          <span class="post-meta-divider" >|</span>
         <% } %>
         <% if (theme.busuanzi_count.site_pv) { %>
           <span class="busuanzi-count">
