1. 优化左侧导航页面智能菜单样式显示。 2. 添加页面点击小红心功能。 3. 增加左侧导航页面社交图标显示。 3. 增加图片鼠标悬停效果。

--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -20,6 +20,8 @@
 @import "./tooltip";
 @import "./footer";
 @import "./post-copyright";
+@import "./hover-reveal";
+
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
