--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -23,5 +23,12 @@
     <%- partial('_partial/tools') %>
     <%- partial('_partial/viewer') %>
   </div>
+  
+  <% if (theme.clickLove && theme.clickLove.enable){ %>
+    <%# "页面点击小红心" %>
+    <script type="text/javascript" src="/js/clickLove.js"></script>
+  <% } %>
+  
+  <%- partial('_partial/hover-effect', { global: theme.hover_effect.global }) %>
 </body>
 </html>
