--- a/source-src/css/fonts.scss
+++ b/source-src/css/fonts.scss
@@ -1,16 +1,16 @@
-@font-face {font-family: "iconfont";
-  src: url('./fonts/iconfont.eot'); /* IE9*/
-  src: url('./fonts/iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/iconfont.woff') format('woff'), /* chrome, firefox */
-  url('./fonts/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('./fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+@font-face {
+  font-family: "yulia-font";
+  src: url('./fonts/yulia-font.eot'); /* IE9*/
+  src: url('./fonts/yulia-font.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('./fonts/yulia-font.woff') format('woff'), /* chrome, firefox */
+  url('./fonts/yulia-font.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('./fonts/yulia-font.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'iconfont' !important;
+  font-family: 'yulia-font' !important;
   speak: none;
-  font-size:16px;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -22,90 +22,214 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-twitter:before { content: "\e600"; }
+.icon-x:before {
+  content: "\78";
+}
 
-.icon-facebook:before { content: "\e601"; }
+.icon-twitter:before {
+  content: "\e600";
+}
 
-.icon-clock:before { content: "\e602"; }
+.icon-facebook:before {
+  content: "\e601";
+}
 
-.icon-mail:before { content: "\e609"; }
+.icon-clock:before {
+  content: "\e602";
+}
 
-.icon-link:before { content: "\e6ab"; }
+.icon-mail:before {
+  content: "\e609";
+}
 
-.icon-search:before { content: "\e65b"; }
+.icon-link:before {
+  content: "\e6ab";
+}
 
-.icon-smile:before { content: "\e64a"; }
+.icon-search:before {
+  content: "\e65b";
+}
 
-.icon-roundrightfill:before { content: "\e65a"; }
+.icon-smile:before {
+  content: "\e64a";
+}
 
-.icon-list:before { content: "\e682"; }
+.icon-roundrightfill:before {
+  content: "\e65a";
+}
 
-.icon-book:before { content: "\e6fe"; }
+.icon-list:before {
+  content: "\e682";
+}
 
-.icon-home:before { content: "\e6bb"; }
+.icon-book:before {
+  content: "\e6fe";
+}
 
-.icon-share:before { content: "\e618"; }
+.icon-home:before {
+  content: "\e6bb";
+}
 
-.icon-back:before { content: "\e625"; }
+.icon-share:before {
+  content: "\e618";
+}
 
-.icon-qq:before { content: "\e62d"; }
+.icon-back:before {
+  content: "\e625";
+}
 
-.icon-weibo:before { content: "\e619"; }
+.icon-qq:before {
+  content: "\e62d";
+}
 
-.icon-segmentfault:before { content: "\e603"; }
+.icon-weibo:before {
+  content: "\e619";
+}
 
-.icon-sort:before { content: "\e700"; }
+.icon-segmentfault:before {
+  content: "\e603";
+}
 
-.icon-jianshu:before { content: "\e613"; }
+.icon-sort:before {
+  content: "\e700";
+}
 
-.icon-circle-left:before { content: "\e71f"; }
+.icon-jianshu:before {
+  content: "\e613";
+}
 
-.icon-circle-right:before { content: "\e720"; }
+.icon-circle-left:before {
+  content: "\e71f";
+}
 
-.icon-loading:before { content: "\e614"; }
+.icon-circle-right:before {
+  content: "\e720";
+}
 
-.icon-acfun:before { content: "\e604"; }
+.icon-loading:before {
+  content: "\e614";
+}
 
-.icon-close:before { content: "\e60c"; }
+.icon-acfun:before {
+  content: "\e604";
+}
 
-.icon-tumblr:before { content: "\e6b0"; }
+.icon-close:before {
+  content: "\e60c";
+}
 
-.icon-calendar:before { content: "\e667"; }
+.icon-tumblr:before {
+  content: "\e6b0";
+}
 
-.icon-rss:before { content: "\e877"; }
+.icon-calendar:before {
+  content: "\e667";
+}
 
-.icon-price-tags:before { content: "\e6f9"; }
+.icon-rss:before {
+  content: "\e877";
+}
 
-.icon-quo-left:before { content: "\e7f5"; }
+.icon-price-tags:before {
+  content: "\e6f9";
+}
 
-.icon-quo-right:before { content: "\e7f6"; }
+.icon-quo-left:before {
+  content: "\e7f5";
+}
 
-.icon-back1:before { content: "\e64e"; }
+.icon-quo-right:before {
+  content: "\e7f6";
+}
 
-.icon-github:before { content: "\e735"; }
+.icon-back1:before {
+  content: "\e64e";
+}
 
-.icon-film:before { content: "\e7b7"; }
+.icon-github:before {
+  content: "\e735";
+}
 
-.icon-weixin:before { content: "\e61f"; }
+.icon-film:before {
+  content: "\e7b7";
+}
 
-.icon-qzone:before { content: "\e680"; }
+.icon-weixin:before {
+  content: "\e61f";
+}
 
-.icon-category:before { content: "\e605"; }
+.icon-qzone:before {
+  content: "\e680";
+}
 
-.icon-douban:before { content: "\e64c"; }
+.icon-category:before {
+  content: "\e605";
+}
 
-.icon-roundleftfill:before { content: "\e799"; }
+.icon-douban:before {
+  content: "\e64c";
+}
 
-.icon-tuding:before { content: "\e651"; }
+.icon-roundleftfill:before {
+  content: "\e799";
+}
 
-.icon-zhihu:before { content: "\e61b"; }
+.icon-tuding:before {
+  content: "\e651";
+}
 
-.icon-linkedin:before { content: "\e6d4"; }
+.icon-zhihu:before {
+  content: "\e61b";
+}
 
-.icon-google:before { content: "\e635"; }
+.icon-linkedin:before {
+  content: "\e6d4";
+}
 
-.icon-plane:before { content: "\e62f"; }
+.icon-google:before {
+  content: "\e635";
+}
 
-.icon-bilibili:before { content: "\e622"; }
+.icon-plane:before {
+  content: "\e62f";
+}
 
-.icon-psn:before { content: "\e6c7"; }
+.icon-bilibili:before {
+  content: "\e622";
+}
+
+.icon-psp:before {
+  content: "\e6c7";
+}
+
+.icon-csdn:before {
+  content: "\e879";
+}
+
+.icon-gitee:before {
+  content: "\e87a";
+}
+
+.icon-statistics:before {
+  content: "\e89f";
+}
+
+.icon-user:before {
+  content: "\e745";
+}
+
+.icon-eye:before {
+  content: "\e6b7";
+}
+
+.icon-nintendo-switch:before {
+  content: "\e7ce";
+}
+
+.icon-cnblogs:before {
+  content: "\e515";
+}
+
+.icon-blog:before {
+  content: "\ebbe";
+}
