优化默认显示配置

--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -1,8 +1,8 @@
 <% if(theme.busuanzi_count.enable && theme.busuanzi_count.page_pv && !index) { %>
 	<span class="<%= class_name %>"> 
-		<%= theme.busuanzi_count.page_pv_header %>
+		<%-theme.busuanzi_count.page_pv_header%>
 		<span class="busuanzi-value" id="busuanzi_value_page_pv" ></span>
-		<%= theme.busuanzi_count.page_pv_footer %>
+		<%-theme.busuanzi_count.page_pv_footer%>
 	</span>
 <% } %>
 
