--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -15,9 +15,9 @@
       <div class="footer-center">
         <% if (theme.busuanzi_count.site_uv) { %>
           <span class="busuanzi-count">
-            <%= theme.busuanzi_count.site_uv_header %>
+            <%-theme.busuanzi_count.site_uv_header%>
             <span class="busuanzi-value" id="busuanzi_value_site_uv"></span>
-            <%= theme.busuanzi_count.site_uv_footer %>
+            <%-theme.busuanzi_count.site_uv_footer%>
           </span>
         <% } %>
         <% if (theme.busuanzi_count.site_uv && theme.busuanzi_count.site_pv) { %>
@@ -25,9 +25,9 @@
         <% } %>
         <% if (theme.busuanzi_count.site_pv) { %>
           <span class="busuanzi-count">
-            <%= theme.busuanzi_count.site_pv_header %>
+            <%-theme.busuanzi_count.site_pv_header%>
             <span class="busuanzi-value" id="busuanzi_value_site_pv"></span>
-            <%= theme.busuanzi_count.site_pv_footer %>
+            <%-theme.busuanzi_count.site_pv_footer%>
           </span>
         <% } %>
       </div>
