--- a/source-src/css/tools.scss
+++ b/source-src/css/tools.scss
@@ -213,7 +213,7 @@
     
     .category-list {
         margin: 0;
-        padding: 0;
+        padding-top: 10px;
         list-style: none;
     }
 
