页脚网站版权信息自定义

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,7 +7,17 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
+        &copy; 
+        <% var newDate = date(new Date(), 'YYYY') %>
+        <% if(theme.footer.since && !isNaN(theme.footer.since) && theme.since < newDate) { %>
+          <%- footer.theme.since %>-
+        <% } %>
+        <%= newDate %>
+        <%= theme.footer.copyright || config.author || config.title %>
+        <% if(theme.footer.icp) { %>
+          &copy;
+          <a href="http://www.beian.miit.gov.cn/" target="_blank"><%-theme.footer.icp%></a>
+        <% } %>
     	</div>
     	<div class="footer-right">
     		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/bujige/hexo-theme-yulia" target="_blank">Yulia</a> by WorkingBoy
