--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -107,13 +107,30 @@
 			-webkit-box-align: center;
 			text-align: center;
 			img{
-				border-radius: 300px;
-				opacity: 1;
-				-webkit-transition: all 0.2s ease-in;
+				/* border-radius: 300px; */
+				/* opacity: 1; */
+				/* -webkit-transition: all 0.2s ease-in; */
+				width: 100%;
+				height: 100%;
+				
+				border-radius: 50%;
+				border: 0;
+				-webkit-transition: -webkit-transform 1s ease-out;
+				-moz-transition: -moz-transform 1s ease-out;
+				-o-transition: -o-transform 1s ease-out;
+				-ms-transition: -ms-transform 1s ease-out;
+			
 				&.show{
 					width: 100%;
 					height: 100%;
 					opacity: 1;
+				}
+				&:hover {
+					-webkit-transform: rotateZ(360deg);
+					-moz-transform: rotateZ(360deg);
+					-o-transform: rotateZ(360deg);
+					-ms-transform: rotateZ(360deg);
+					transform: rotateZ(360deg);
 				}
 			}
 		}
