--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -150,4 +150,14 @@
       url: config.url+url_for(post.path)
     }) %>
   <% } %>
+  
+  <% if (theme.valine.enable && theme.valine.appid && theme.valine.appkey){ %>
+      <section id="comments" style="margin:10px;padding:10px;background:#fff;">
+        <%- partial('post/valine', {
+          key: post.slug,
+          title: post.title,
+          url: config.url+url_for(post.path)
+          }) %>
+      </section>
+    <% } %>
 <% } %>
