增加手机端点击头像跳转主页功能。

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -151,6 +151,7 @@
     }) %>
   <% } %>
   
+  <%# "Valine: 利用 Leancloud 搭建" %>
   <% if (theme.valine.enable && theme.valine.appid && theme.valine.appkey){ %>
       <section id="comments" style="margin:10px;padding:10px;background:#fff;">
         <%- partial('post/valine', {
