--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -6,9 +6,10 @@
 	</div>
 	<div class="intrude-less">
 		<header id="header" class="inner">
-			<div class="profilepic">
+			<a href="<%=theme.root%>" class="profilepic">
 				<img src="<%=theme.avatar%>" class="js-avatar">
-			</div>
+			</a>
+			
 			<hgroup>
 			  <h1 class="header-author js-header-author"><%=theme.author%></h1>
 			</hgroup>
