--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -64,7 +64,7 @@
             </li>
             <li class="post-copyright-license">
               <strong><%= __('post.copyright.license_title') %>：</strong>
-              <%-  __('post.copyright.license_content', theme.post_copyright.license, theme.post_copyright.license); %>
+              <%-  __('post.copyright.license_content', theme.post_copyright.license_url, theme.post_copyright.license); %>
             </li>
           </ul>
         </div>
